Update documentation and refactor file-storage
